[project]
name = "joy-caption-batch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.2.1",
    "bitsandbytes>=0.45.0",
    "huggingface-hub==0.24.3",
    "protobuf>=5.29.3",
    "sentencepiece>=0.2.0",
    "spaces>=0.32.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers==4.43.3",
]
